/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package aaa.protos;
option go_package = "magma/feg/gateway/services/aaa/protos";

message context {
    string session_id = 1;
    string imsi = 2;
    bytes msk = 3;
    string identity = 4;
    string msisdn = 5;
    string apn = 6;
    string mac_addr = 7;
    string ip_addr = 8;
    string auth_session_id = 9;
    string acct_session_id = 10;
    uint64 created_time_ms = 11;
}

message Void {
}
